LiveNBT v0.2 - vanilla 26.2, live inventory editor, painless installer
- Vanilla Minecraft Java 26.2 support via a -javaagent (ByteBuddy), no mod loader.
- Live inventory editor with searchable item + enchantment pickers backed by the
  full bundled 26.2 registry.
- The agent keeps the integrated server ticking while the app is connected, so
  edits apply live in-game.
- Windows installer that wires the -javaagent argument into the launcher for you.
- Docs + README refreshed for public use.